# ExtremeBinning

./: CMakeLists.txt  PrimaryIndex.cpp  PrimaryIndex.h  README.md  XB_Backup.cpp  XB_Restore.cpp  XB_includes.h  main.cpp  makefile  sampleFile.txt
cmake/Modules/: FindBoost.cmake  FindOpenSSL.cmake
sampleDirectory/: sampleFile2.txt
sampleDirectory/otherSampleDirectory/: innerSampleFile1.txt  sampleFile1_copy1.txt
